--- a/Assignment 14/Task 1/Task 1.csproj
+++ b/Assignment 14/Task 1/Task 1.csproj
@@ -46,7 +46,7 @@
         <Compile Include="Quiz.cs" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="Quiz files\" />
+      <Folder Include="QuizFiles\" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
